# GeoNeXt-MCP

./: .env.example  .gitignore  LICENSE  MANIFEST.in  README.md  apply_changes.sh  deploy.sh  geonext-mcp.py  goated_oneliner.md  pyproject.toml
debugger/: start-debugger.sh
geonext_mcp/: __init__.py  server.py
systemd/: geonext-mcp.service
utils/: goated_oneliner.sh
